# markov

./: .gitignore  README.md  demo1.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/markovgpu/: __init__.py  backend.py  kernels.cl  sklearn.py
tests/: test_basic.py
